<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ticket.ViewBusFullDetailActivity">

    <RelativeLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/back_button"
            android:foregroundGravity="center"
            android:onClick="goBack"
            app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24"
            app:tint="@color/colorDarkBlackText" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/book_ticket"
            android:textColor="@color/colorDarkBlackText"
            android:textSize="22sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorMainDark"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/bookCompanyName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/sajha_yatayat"
                    android:textColor="@color/colorDarkBlackText"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/bookFromTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/kathmandu_to_pokhara"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/bookDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/_01_jan_2022"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/bookTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/time_02_00_pm"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/bookFacilities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/facilities"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/bookBusNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/ba_1_pa_2001"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/bookAvailableSeats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/a1_a2_a3_a4_a5_a6_a7_a8_a9_a10_a11_a12_a13_a14_a15_a16_a17_b1_b2_b3_b4_b5_b6_b7_b8_b9_b10_b11_b2_b13_b14_b15_b16_b17"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/bookPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/rs_800"
                    android:textSize="20sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/seats" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/bookPassengerName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_passenger_name"
                    app:boxStrokeColor="@color/colorMain"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:errorTextColor="@color/colorMainDark"
                    app:hintTextColor="@color/colorMainDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="true"
                        android:inputType="textPersonName"
                        android:textColor="@color/colorDarkBlackText" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/bookPassengerContact"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_phone_number"
                    app:boxStrokeColor="@color/colorMain"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:errorTextColor="@color/colorMainDark"
                    app:hintTextColor="@color/colorMainDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="true"
                        android:inputType="textPersonName"
                        android:textColor="@color/colorDarkBlackText" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/bookPassengerSeat"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_seat_number"
                    app:boxStrokeColor="@color/colorMain"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:errorTextColor="@color/colorMainDark"
                    app:hintTextColor="@color/colorMainDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="true"
                        android:hint="a8 a9"
                        android:inputType="textNoSuggestions"
                        android:textColor="@color/colorDarkBlackText" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/button_book_ticket"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:onClick="bookTickets"
                    android:padding="15sp"
                    android:text="@string/book_tickets"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    app:backgroundTint="@color/colorMain" />


            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</LinearLayout>