<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/home_view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:background="@color/colorMain">
        </androidx.viewpager2.widget.ViewPager2>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/find_tickets"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/colorModernBlackText"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textSize="22sp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/from_location"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_city"
                app:boxStrokeColor="@color/colorMain"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="dropdown_menu"
                app:errorTextColor="@color/colorMainDark"
                app:hintTextColor="@color/colorMainDark"
                app:hintEnabled="false">

                <AutoCompleteTextView
                    android:id="@+id/from_location_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:textColor="@color/colorDarkBlackText"
                    android:hint="@string/select_city"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textSize="22sp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/to_location"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_city"
                app:boxStrokeColor="@color/colorMain"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="dropdown_menu"
                app:errorTextColor="@color/colorMainDark"
                app:hintTextColor="@color/colorMainDark"
                app:hintEnabled="false">

                <AutoCompleteTextView
                    android:id="@+id/to_location_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:hint="@string/select_city"
                    android:textColor="@color/colorDarkBlackText"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="22sp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/datePicker"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_date"
                app:boxStrokeColor="@color/colorMain"
                app:boxStrokeWidthFocused="2dp"
                app:errorTextColor="@color/colorMainDark"
                app:hintTextColor="@color/colorMainDark"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/date_picker_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:cursorVisible="true"
                    android:hint="@string/select_date"
                    android:textColor="@color/colorDarkBlackText"
                    android:onClick="launchDatePicker"
                    android:focusable="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_find_tickets"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:padding="15sp"
                android:text="@string/search_tickets"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                app:backgroundTint="@color/colorMain" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>