<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".accountManagement.SignUpActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="30dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/save_first_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_first_name"
            app:boxStrokeColor="@color/colorMain"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:errorTextColor="@color/colorMainDark"
            app:hintTextColor="@color/colorMainDark">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:inputType="textPersonName"
                android:textColor="@color/colorDarkBlackText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/save_second_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_second_name"
            app:boxStrokeColor="@color/colorMain"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:errorTextColor="@color/colorMainDark"
            app:hintTextColor="@color/colorMainDark">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:inputType="textPersonName"
                android:textColor="@color/colorDarkBlackText" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/save_gender"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_gender"
            app:boxStrokeColor="@color/colorMain"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="dropdown_menu"
            app:errorTextColor="@color/colorMainDark"
            app:hintTextColor="@color/colorMainDark">

            <AutoCompleteTextView
                android:id="@+id/gender_auto_complete_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textColor="@color/colorDarkBlackText" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/button_login"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:onClick="saveDetails"
            android:padding="15sp"
            android:text="@string/save_details"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:backgroundTint="@color/colorMain" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>